test_scripts/errors/unexpected_token_primary.stderr
Parse Error:
 1 | + 5;
     ^
Error: Unexpected `Plus` in parse_primary
Failed to parse script
